# maqui_bringup

./: CMakeLists.txt  README.md  package.xml
Grammar/CockTailParty/: confirmation.bnf  drinks.bnf  names.bnf
Grammar/Examples/: cdd.bnf  gpsr.lcf  pepper_grammar.bnf
Grammar/SPR/: pepper_spr.bnf  pepper_spr_v2.bnf
config/localization/: amcl.yaml
config/navigation/: costmap_common.yaml  local_costmap.yaml  move_base.yaml
config/rviz/: common.rviz
grammar/: compile_dics.py
grammar/CP/: av_and_miss.bnf  av_drinks.bnf  av_drinks2.bnf  drinks.bnf  drinks.lcf  miss_drink.bnf
grammar/CocktailParty/: drinks.bnf  drinks.lcf  names.bnf  names.lcf
grammar/Examples/: cdd.lcf  pepper_grammar.bnf  pepper_new.bnf  sguide.bnf  sguide.lcf  sguide_spa.bnf  sguide_spa.lcf
grammar/GPSR/: gpsr.lcf  gpsr_in_working.lcf
grammar/SPR/: questions.bnf  questions.lcf  questions_2017.bnf  spr.bnf  spr.lcf
grammar/basic/: confirmation.bnf  continue.bnf  names.bnf  names.lcf
grammar/restaurant/: confirmation.lcf
launch/: external.launch  gmapping.launch  maqui.launch  maqui_full.launch  maqui_mapeo.launch  navfull.launch  odom.launch  pcl_to_scan.launch  rtab_pepper.launch  rviz.launch  test.launch
launch/localization/: amcl.launch.xml  gmapping.launch.xml  localization.launch  odometry.launch.xml  visual.launch.xml
launch/navigation/: goal_server.launch.xml  move_base.launch  move_base.launch.xml  (+2 more)
shell/: setup.sh
src/: camera_custom2.py  camera_custom_publisher.py  collitions_sensors.py  head_fix.py  map_states.py  peper_indicators.py  pepper_tablet.py  pose.py
(+52 files in other folders)
